<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:paddingLeft="@dimen/dp_72"
        android:paddingRight="@dimen/dp_72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_superfuns"
        />
    <EditText
        android:id="@+id/sn_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:hint="@string/sn_code"
        android:textColor="@color/blackColor"
        android:visibility="gone"
        android:textSize="@dimen/normal_text_size"
        />

    <EditText
        android:id="@+id/auth_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sn_code"
        android:hint="@string/auth_code"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="@dimen/margin_top_20"
        android:layout_marginRight="@dimen/margin_left_right"
        android:textColor="@color/blackColor"
        android:visibility="gone"
        android:textSize="@dimen/normal_text_size"
        />

    <Button
        android:id="@+id/obtain_auth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/bg_button"
        android:text="@string/obtain_auth"
        android:textColor="@color/witheColor"
        android:textSize="@dimen/normal_text_size"
        android:visibility="gone"
        android:layout_margin="@dimen/margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_code" />

    <Button
        android:id="@+id/bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/bg_button"
        android:text="@string/binding"
        android:textColor="@color/witheColor"
        android:textSize="@dimen/normal_text_size"
        android:visibility="gone"
        android:layout_margin="@dimen/margin_top_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/obtain_auth" />
</androidx.constraintlayout.widget.ConstraintLayout>
