<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/witheColor"
    android:id="@+id/layout"
    >


    <LinearLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayColor"
        android:orientation="horizontal"
        android:padding="@dimen/padding_size"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.Text"
                android:text="@string/sum_count" />

            <TextView
                android:id="@+id/sum_count"
                style="@style/AppTheme.Text"
                android:text="@string/normal_count"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.Text"
                android:text="@string/green_code" />

            <TextView
                android:id="@+id/green_code_count"
                style="@style/AppTheme.Text"
                android:text="@string/normal_count"
                android:textColor="@color/greenColor"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.Text"
                android:text="@string/red_yellow_code" />

            <TextView
                android:id="@+id/exception_count"
                style="@style/AppTheme.Text"
                android:text="@string/normal_count"
                android:textColor="@color/redColor"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/temp"
        style="@style/AppTheme.Text"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:textSize="@dimen/temp_txt_size"
        app:layout_constraintBottom_toTopOf="@id/middle_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/traffic_record"
        style="@style/AppTheme.Text"
        android:background="@color/witheColor"
        android:padding="@dimen/padding_size"
        android:text="@string/traffic_record"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view" />

    <ImageView
        android:id="@+id/middle_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/health_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/middle_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/health_code"
        android:textSize="@dimen/dp_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        style="@style/AppTheme.Text"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:textColor="@color/blackColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_status" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--        <TextView-->
        <!--            android:id="@+id/name"-->
        <!--            style="@style/AppTheme.Text"-->
        <!--            android:text="@string/name"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            android:textColor="@color/blackColor"-->
        <!--            android:visibility="invisible"/>-->

        <!--        <TextView-->
        <!--            android:layout_below="@id/name"-->
        <!--            android:id="@+id/id_number"-->
        <!--            android:layout_centerHorizontal="true"-->
        <!--            style="@style/AppTheme.Text"-->
        <!--            android:text="@string/id_number"-->
        <!--            android:textColor="@color/blackColor"-->
        <!--            android:visibility="invisible"/>-->

        <Button
            android:id="@+id/reset_measure"
            style="@style/AppTheme.Text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/resetColor"
            android:gravity="center"
            android:text="@string/reset_measure"
            android:textColor="@color/witheColor"
            android:textSize="@dimen/bottom_txt_size"
            android:visibility="gone" />

        <Button
            android:id="@+id/prompt"
            style="@style/AppTheme.Text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/colorBg"
            android:gravity="center"
            android:text="@string/please_scan"
            android:textColor="@color/witheColor"
            android:textSize="@dimen/bottom_txt_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>